--- a/.gitignore
+++ b/.gitignore
@@ -62,12 +62,12 @@ bower_components/
 .flooignore
 
 #config file
-librechat.yaml
-librechat.yml
+# librechat.yaml
+# librechat.yml
 
 # Environment
 .npmrc
-.env*
+# .env*
 my.secrets
 !**/.env.example
 !**/.env.test.example
