--- a/.env
+++ b/.env
@@ -318,11 +318,11 @@ TTS_API_KEY=
 #==================================================#
 # 更多信息：https://www.librechat.ai/docs/configuration/rag_api
 
-# RAG_OPENAI_BASEURL=
-# RAG_OPENAI_API_KEY=
-# RAG_USE_FULL_CONTEXT=
-# EMBEDDINGS_PROVIDER=openai
-# EMBEDDINGS_MODEL=text-embedding-3-small
+RAG_OPENAI_BASEURL=https://vip.apiyi.com/v1
+RAG_OPENAI_API_KEY=XXX
+RAG_USE_FULL_CONTEXT=
+EMBEDDINGS_PROVIDER=openai
+EMBEDDINGS_MODEL=text-embedding-3-small
 
 #===================================================#
 #                    用户系统                       #
